[gd_scene load_steps=10 format=3 uid="uid://bsi6ktwuiai8n"]

[ext_resource type="Texture2D" uid="uid://ctco8snjqinab" path="res://assets/sprites/DALLÂ·E 2024-11-15 19.22.37 - A pixelated background for a game themed around Ibn Battuta. The setting includes elements inspired by his travels, such as an ancient desert landscap.webp" id="1_fmwxq"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="3_ejc06"]
[ext_resource type="AudioStream" uid="uid://dftrdqrjdcedl" path="res://assets/music/alexander-nakarada-the-great-battle(chosic.com).mp3" id="4_bil2u"]
[ext_resource type="FontFile" uid="uid://dlk0p5n2mdgm4" path="res://assets/fonts/PixelOperator8.ttf" id="4_hkiw7"]
[ext_resource type="AudioStream" uid="uid://bvxc6m6aejbfu" path="res://assets/music/old-radio-button-click-97549.mp3" id="5_emwee"]
[ext_resource type="AudioStream" uid="uid://bsa6f8h0icr7l" path="res://assets/music/click-21156.mp3" id="6_j3wmu"]

[sub_resource type="Animation" id="Animation_g1ug3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_g7nco"]
resource_name = "fade out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c37qp"]
_data = {
"RESET": SubResource("Animation_g1ug3"),
"fade out": SubResource("Animation_g7nco")
}

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_ejc06")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_fmwxq")
expand_mode = 1
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("4_hkiw7")
theme_override_font_sizes/font_size = 64
text = "The Wanderer's Puzzle"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Control2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Start Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 32)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_hkiw7")
theme_override_font_sizes/font_size = 64
text = "Start"
flat = true

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/Start Button"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Options Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 32)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_hkiw7")
theme_override_font_sizes/font_size = 64
text = "Options"
flat = true

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/Options Button"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Quit Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 32)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_hkiw7")
theme_override_font_sizes/font_size = 64
text = "Quit"
flat = true

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/Quit Button"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c37qp")
}

[node name="Background" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_bil2u")
volume_db = -11.015
autoplay = true

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_emwee")
volume_db = 13.29

[node name="HoverSoundr" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_j3wmu")
volume_db = 12.415
